@@ -306,6 +306,8 @@ class HtmlToContentStateHandler(HTMLParser):
             element_handler.handle_starttag(name, attrs, self.state, self.contentstate)
 
     def handle_endtag(self, name):
+        if not self.open_elements:
+            return  # avoid a pop from an empty list if we have an extra end tag
         expected_name, element_handler = self.open_elements.pop()
         assert name == expected_name, "Unmatched tags: expected %s, got %s" % (expected_name, name)
         if element_handler:
